@@ -1479,6 +1479,7 @@ please see math/README to configure.',
 'right-createaccount'        => 'Create new user accounts',
 'right-minoredit'            => 'Mark edits as minor',
 'right-move'                 => 'Move pages',
+'right-move-subpages'        => 'Move pages with their subpages',
 'right-suppressredirect'     => 'Not create a redirect from the old name when moving a page',
 'right-upload'               => 'Upload files',
 'right-reupload'             => 'Overwrite an existing file',
