@@ -54,6 +54,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * $wgActiveUserDays is that number of days
 * $wgRateLimitsExcludedGroups has been deprecated in favor of 
   $wgGroupPermissions[]['noratelimit']. The former still works, however.
+* New $wgGroupPermissions option 'move-subpages' added to control bulk-moving
+  subpages along with pages.  Assigned to 'user' and 'sysop' by default.
 
 === New features in 1.13 ===
 
